--- a/app/public/home.html
+++ b/app/public/home.html
@@ -24,7 +24,7 @@
 
 
 <!--Link to style css-->
-    <link rel="stylesheet" type="text/css" href="/app/public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
 <!--Link to google fonts-->
 <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
