best match working

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -43,7 +43,7 @@
                         
                     <h1 class="display-4">Friend Finder</h1>
                         <p class="lead">Answer some questions.</p>
-                        <p class="lead">Find a Friend.</p>
+                        <p class="lead">Find a New Friend.</p>
                         <a href="/survey">
                             <button class="btn btn-lg btn-secondary"><i class="fas fa-user-friends"></i>     Go to Survey</button>
                           </a>
