--- a/app/public/home.html
+++ b/app/public/home.html
@@ -54,7 +54,10 @@
                 </div>
             </div>
 
-    <a href="/api/friends">API Friend List</a> | <a href="">Github Repo</a>
+
+            <footer> <a href="/api/friends">API Friend List</a> | <a href="">Github Repo</a> </footer>
+
+    
 
 </div>
     
