--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -296,7 +296,7 @@
 
 </div> <!--End Container-->
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> 
 </body>
@@ -329,9 +329,7 @@
     return valid;
   }
 
-  console.log(validateForm() + " validate?");
-
-    
+  
     if(validateForm() === true) {
       
 //grab user answers
@@ -367,8 +365,6 @@
   } else {alert("Please fill out all fields before submitting")}
     return false;
 });
-
-  
 
   
 
