add github link

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -55,7 +55,7 @@
             </div>
 
 
-            <footer> <a href="/api/friends">API Friend List</a> | <a href="">Github Repo</a> </footer>
+            <footer> <a href="/api/friends">API Friend List</a> | <a href="https://github.com/danielledees/FriendFinder.git" target=_blank>Github Repo</a> </footer>
 
     
 
