--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -271,7 +271,7 @@
 <hr>
 
 <!--Footer-->
-<footer><a href="/api/friends">API Friend List</a> | <a href="">Github Repo</a> </footer>
+<footer><a href="/api/friends">API Friend List</a> | <a href="https://github.com/danielledees/FriendFinder.git" target=_blank>Github Repo</a> </footer>
 
     
 
